# hello-world-arm-efi

./: Cargo.toml  README.md  armv6kz-none-eabihf.json  build.sh
src/: lib.rs
